platforms/android/app/src/main/cpp/3rdparty/libjpeg-turbo/src/turbojpeg.h

#define TURBOJPEG_VERSION_NUMBER  3002000
typedef void *tjhandle;
DLLEXPORT tjhandle tj3Init(int initType);
#define tj3Init(initType)  tj3InitVersion(initType, TURBOJPEG_VERSION_NUMBER)
DLLEXPORT tjhandle tj3InitVersion(int initType, int apiVersion);
DLLEXPORT void tj3Destroy(tjhandle handle);
DLLEXPORT char *tj3GetErrorStr(tjhandle handle);
DLLEXPORT int tj3GetErrorCode(tjhandle handle);
DLLEXPORT int tj3Set(tjhandle handle, int param, int value);
DLLEXPORT int tj3Get(tjhandle handle, int param);
DLLEXPORT void *tj3Alloc(size_t bytes);
DLLEXPORT void tj3Free(void *buffer);
DLLEXPORT size_t tj3JPEGBufSize(int width, int height, int jpegSubsamp);
DLLEXPORT size_t tj3YUVBufSize(int width, int align, int height, int subsamp);
DLLEXPORT size_t tj3YUVPlaneSize(int componentID, int width, int stride,
                                 int height, int subsamp);
DLLEXPORT int tj3YUVPlaneWidth(int componentID, int width, int subsamp);
DLLEXPORT int tj3YUVPlaneHeight(int componentID, int height, int subsamp);
DLLEXPORT int tj3SetICCProfile(tjhandle handle, unsigned char *iccBuf,
                               size_t iccSize);
DLLEXPORT int tj3Compress8(tjhandle handle, const unsigned char *srcBuf,
                           int width, int pitch, int height, int pixelFormat,
                           unsigned char **jpegBuf, size_t *jpegSize);
DLLEXPORT int tj3Compress12(tjhandle handle, const short *srcBuf, int width,
                            int pitch, int height, int pixelFormat,
                            unsigned char **jpegBuf, size_t *jpegSize);
DLLEXPORT int tj3Compress16(tjhandle handle, const unsigned short *srcBuf,
                            int width, int pitch, int height, int pixelFormat,
                            unsigned char **jpegBuf, size_t *jpegSize);
DLLEXPORT int tj3CompressFromYUVPlanes8(tjhandle handle,
                                        const unsigned char * const *srcPlanes,
                                        int width, const int *strides,
                                        int height, unsigned char **jpegBuf,
                                        size_t *jpegSize);
DLLEXPORT int tj3CompressFromYUV8(tjhandle handle,
                                  const unsigned char *srcBuf, int width,
                                  int align, int height,
                                  unsigned char **jpegBuf, size_t *jpegSize);
DLLEXPORT int tj3EncodeYUVPlanes8(tjhandle handle, const unsigned char *srcBuf,
                                  int width, int pitch, int height,
                                  int pixelFormat, unsigned char **dstPlanes,
                                  int *strides);
DLLEXPORT int tj3EncodeYUV8(tjhandle handle, const unsigned char *srcBuf,
                            int width, int pitch, int height, int pixelFormat,
                            unsigned char *dstBuf, int align);