platforms/android/app/src/main/cpp/3rdparty/libjpeg-turbo/jna/TJ.java


  public static Pointer tj3Init(int initType) {
    return tj3InitVersion(initType, TURBOJPEG_VERSION_NUMBER);
  }

  public static Pointer init(int initType) throws Exception {
    Pointer handle = tj3Init(initType);
    if (handle == null)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
    return handle;
  }

  // --------------------------------------------------------------------------

  public static native void tj3Destroy(Pointer handle);

  public static void destroy(Pointer handle) {
    tj3Destroy(handle);
  }

  // --------------------------------------------------------------------------

  public static native String tj3GetErrorStr(Pointer handle);

  // --------------------------------------------------------------------------

  public static native int tj3GetErrorCode(Pointer handle);

  // --------------------------------------------------------------------------

  public static native int tj3Set(Pointer handle, int param, int value);

  public static void set(Pointer handle, int param, int value)
                         throws Exception {
    if (tj3Set(handle, param, value) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }

  // --------------------------------------------------------------------------

  public static native int tj3Get(Pointer handle, int param);

  public static int get(Pointer handle, int param) {
    return tj3Get(handle, param);
  }

  // --------------------------------------------------------------------------

  public static native Pointer tj3Alloc(NativeLong bytes);

  public static Pointer alloc(NativeLong bytes) {
    return tj3Alloc(bytes);
  }

  // --------------------------------------------------------------------------

  public static native void tj3Free(Pointer buffer);

  public static void free(Pointer buffer) {
    tj3Free(buffer);
  }

  // --------------------------------------------------------------------------

  public static native NativeLong tj3JPEGBufSize(int width, int height,
                                                 int jpegSubsamp);

  public static NativeLong jpegBufSize(int width, int height, int jpegSubsamp)
                                       throws Exception {
    NativeLong retval = tj3JPEGBufSize(width, height, jpegSubsamp);
    if (retval.longValue() == 0)
      throw new Exception(tj3GetErrorStr(null), tj3GetErrorCode(null));
    return retval;
  }

  // --------------------------------------------------------------------------

  public static native NativeLong tj3YUVBufSize(int width, int align,
                                                int height, int subsamp);

  public static NativeLong yuvBufSize(int width, int align, int height,
                                      int subsamp) throws Exception {
    NativeLong retval = tj3YUVBufSize(width, align, height, subsamp);
    if (retval.longValue() == 0)
      throw new Exception(tj3GetErrorStr(null), tj3GetErrorCode(null));
    return retval;
  }

  // --------------------------------------------------------------------------

  public static native NativeLong tj3YUVPlaneSize(int componentID, int width,
                                                  int stride, int height,
                                                  int subsamp);

  public static NativeLong yuvPlaneSize(int componentID, int width, int stride,
                                        int height, int subsamp)
                                        throws Exception {
    NativeLong retval = tj3YUVPlaneSize(componentID, width, stride, height,
                                        subsamp);
    if (retval.longValue() == 0)
      throw new Exception(tj3GetErrorStr(null), tj3GetErrorCode(null));
    return retval;
  }

  // --------------------------------------------------------------------------

  public static native int tj3YUVPlaneWidth(int componentID, int width,
                                            int subsamp);

  public static int yuvPlaneWidth(int componentID, int width, int subsamp)
                                  throws Exception {
    int retval = tj3YUVPlaneWidth(componentID, width, subsamp);
    if (retval == 0)
      throw new Exception(tj3GetErrorStr(null), tj3GetErrorCode(null));
    return retval;
  }

  // --------------------------------------------------------------------------

  public static native int tj3YUVPlaneHeight(int componentID, int height,
                                             int subsamp);

  public static int yuvPlaneHeight(int componentID, int width, int subsamp)
                                   throws Exception {
    int retval = tj3YUVPlaneHeight(componentID, width, subsamp);
    if (retval == 0)
      throw new Exception(tj3GetErrorStr(null), tj3GetErrorCode(null));
    return retval;
  }

  // --------------------------------------------------------------------------

  public static native int tj3SetICCProfile(Pointer handle, Pointer iccBuf,
                                            NativeLong iccSize);

  public static void setICCProfile(Pointer handle, Pointer iccBuf,
                                    NativeLong iccSize) throws Exception {
    if (tj3SetICCProfile(handle, iccBuf, iccSize) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }

  // --------------------------------------------------------------------------

  public static native int tj3Compress8(Pointer handle, Pointer srcBuf,
                                        int width, int pitch, int height,
                                        int pixelFormat,
                                        PointerByReference jpegBuf,
                                        NativeLongByReference jpegSize);

  public static void compress8(Pointer handle, Pointer srcBuf, int width,
                               int pitch, int height, int pixelFormat,
                               PointerByReference jpegBuf,
                               NativeLongByReference jpegSize)
                               throws Exception {
    if (tj3Compress8(handle, srcBuf, width, pitch, height, pixelFormat,
                     jpegBuf, jpegSize) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }

  // --------------------------------------------------------------------------

  public static native int tj3Compress12(Pointer handle, Pointer srcBuf,
                                         int width, int pitch, int height,
                                         int pixelFormat,
                                         PointerByReference jpegBuf,
                                         NativeLongByReference jpegSize);

  public static void compress12(Pointer handle, Pointer srcBuf, int width,
                                int pitch, int height, int pixelFormat,
                                PointerByReference jpegBuf,
                                NativeLongByReference jpegSize)
                                throws Exception {
    if (tj3Compress12(handle, srcBuf, width, pitch, height, pixelFormat,
                      jpegBuf, jpegSize) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }

  // --------------------------------------------------------------------------

  public static native int tj3Compress16(Pointer handle, Pointer srcBuf,
                                         int width, int pitch, int height,
                                         int pixelFormat,
                                         PointerByReference jpegBuf,
                                         NativeLongByReference jpegSize);

  public static void compress16(Pointer handle, Pointer srcBuf, int width,
                                int pitch, int height, int pixelFormat,
                                PointerByReference jpegBuf,
                                NativeLongByReference jpegSize)
                                throws Exception {
    if (tj3Compress16(handle, srcBuf, width, pitch, height, pixelFormat,
                      jpegBuf, jpegSize) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }

  // --------------------------------------------------------------------------

  // srcPlanes

  public static native int
    tj3CompressFromYUVPlanes8(Pointer handle, PointerReference srcPlanes,
                              int width, int[] strides, int height,
                              PointerByReference jpegBuf,
                              NativeLongByReference jpegSize);

  public static void compressFromYUVPlanes8(Pointer handle,
                                            PointerReference[] srcPlanes,
                                            int width, int[] strides,
                                            int height,
                                            PointerByReference jpegBuf,
                                            NativeLongByReference jpegSize)
                                            throws Exception {
    if (tj3CompressFromYUVPlanes8(handle, srcPlanes[0], width, strides, height,
                                  jpegBuf, jpegSize) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }

  // --------------------------------------------------------------------------

  public static native int tj3CompressFromYUV8(Pointer handle, Pointer srcBuf,
                                               int width, int align,
                                               int height,
                                               PointerByReference jpegBuf,
                                               NativeLongByReference jpegSize);

  public static void compressFromYUV8(Pointer handle, Pointer srcBuf,
                                      int width, int align, int height,
                                      PointerByReference jpegBuf,
                                      NativeLongByReference jpegSize)
                                      throws Exception {
    if (tj3CompressFromYUV8(handle, srcBuf, width, align, height, jpegBuf,
                            jpegSize) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }

  // --------------------------------------------------------------------------

  public static native int tj3EncodeYUVPlanes8(Pointer handle, Pointer srcBuf,
                                               int width, int pitch,
                                               int height, int pixelFormat,
                                               PointerReference dstPlanes,
                                               int[] strides);

  public static void encodeYUVPlanes8(Pointer handle, Pointer srcBuf,
                                      int width, int pitch, int height,
                                      int pixelFormat,
                                      PointerReference[] dstPlanes,
                                      int[] strides) throws Exception {
    if (tj3EncodeYUVPlanes8(handle, srcBuf, width, pitch, height, pixelFormat,
                            dstPlanes[0], strides) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }

  // --------------------------------------------------------------------------

  public static native int tj3EncodeYUV8(Pointer handle, Pointer srcBuf,
                                         int width, int pitch, int height,
                                         int pixelFormat, Pointer dstBuf,
                                         int align);

  public static void encodeYUV8(Pointer handle, Pointer srcBuf, int width,
                                int pitch, int height, int pixelFormat,
                                Pointer dstBuf, int align) throws Exception {
    if (tj3EncodeYUV8(handle, srcBuf, width, pitch, height, pixelFormat,
                      dstBuf, align) < 0)
      throw new Exception(tj3GetErrorStr(handle), tj3GetErrorCode(handle));
  }
